---

* [Bug 3846] Use -Wno-format-truncation by default.
* [Bug 3845] accelerate pool clock_sync when IPv6 has only link-local access.
             <hart@ntp.org>
* [Bug 3841] 4.2.8p17 build break w/ gcc 12 -Wformat-security without -Wformat
             Need to remove --Wformat-security when removing -Wformat to
             silence numerous libopts warnings.  <hart@ntp.org>
* [Bug 3837] NULL pointer deref crash when ntpd deletes last interface.
             Reported by renmingshuai.  Correct UNLINK_EXPR_SLIST() when the
             list is empty. <hart@ntp.org>
* [Bug 3835] NTP_HARD_*FLAGS not used by libevent tearoff.
* [Bug 3831] pollskewlist zeroed on runtime configuration. <hart@ntp.org>
* [Bug 3830] configure libevent check intersperses output with answer. <stenn@>
* [Bug 3828] BK should ignore a git repo in the same directory.
             <burnicki@ntp.org>
* [Bug 3827] Fix build in case CLOCK_HOPF6021 or CLOCK_WHARTON_400A
             is disabled.  <burnicki@ntp.org>
* [Bug 3825] Don't touch HTML files unless building inside a BK repo.
             Fix the script checkHtmlFileDates.  <burnicki@ntp.org>
* html/clockopt.html cleanup.  <stenn@ntp.org>
* Add DSA, DSA-SHA, and SHA to tests/libntp/digests.c. <hart@ntp.org>

---
(4.2.8p17) 2023/06/06 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 3824] Spurious "ntpd: daemon failed to notify parent!" logged at
             event_sync.  Reported by Edward McGuire.  <hart@ntp.org>
* [Bug 3822] ntpd significantly delays first poll of servers specified by name.
             <hart@ntp.org>  Miroslav Lichvar identified regression in 4.2.8p16.
* [Bug 3821] 4.2.8p16 misreads hex authentication keys, won't interop with
             4.2.8p15 or earlier.  Reported by Matt Nordhoff, thanks to
	     Miroslav Lichvar and Matt for rapid testing and identifying the
	     problem. <hart@ntp.org>
* Add tests/libntp/digests.c to catch regressions reading keys file or with
  symmetric authentication digest output.

---